--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,7 +10,7 @@ html
 	body
 		header
 			nav.white.black-text.center.spotlight Spotlight blog
-				a(href="register/new").brand-logo.black-text.right Register
+				a(href="register/new").black-text.right Register
 		.rows
 			img#image(src="/images/backgroundimagetwo.png").col.s12.responsive-img
 		.options
@@ -44,10 +44,12 @@ html
 			br
 			br
 			br
-			.rows
-				img(src="/images/backgroundimage.png").col.s12
+		.rows
+			img(src="/images/copy.png").col.s12
+		br
 		footer
-			nav.white.black-text.center(id="footer") Connect with other artists around the world
+			.white.black-text.center(id="footer") Connect with other people around the world
+			br
 
 		script(type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js")
-		script(type="text/javascript" src="js/materialize.min.js")
+		script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js")
