updated myposts page so it displays users posts and not everyones posts

--- a/src/views/profileposts.pug
+++ b/src/views/profileposts.pug
@@ -24,7 +24,7 @@ html
 			
 		each personalpost in list
 			ul.profileposts.z-depth-4
-				li#text1 Your Post: 
+				li#text1 #{user.username} Post: 
 				li#text Title: #{personalpost.title}
 				br
 				li#text Blog: #{personalpost.blog}
