--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -44,7 +44,7 @@ html
 								br
 								.row
 									.input-field
-										input(id="textspace", name="blog", placeholder="My thoughts...", rows="100", columns="100" required).materialize-textarea
+										input(id="textspace", name="blog", placeholder="My thoughts...",   required).materialize-textarea
 									br
 									br
 								button(id="submit" type="submit", value="Submit").btn.modal-action.amber.lighten-2.waves-effect.waves-light.black-text Submit
